# well-bracketed-logic

./: .gitignore  LICENSE  Makefile  README.md  _CoqProject  coq-well-bracketed.opam  index.html
extra/: header.html
gh-pages/: index.html  publish_webpage.sh
html/: WBLogic.F_mu_ref.base.html  WBLogic.F_mu_ref.binary.context_refinement.html  WBLogic.F_mu_ref.binary.examples.fact.html  WBLogic.F_mu_ref.binary.examples.very_awkward.html  WBLogic.F_mu_ref.binary.fundamental.html  WBLogic.F_mu_ref.binary.logrel.html  WBLogic.F_mu_ref.binary.rules.html  WBLogic.F_mu_ref.binary.soundness.html  WBLogic.F_mu_ref.lang.html  WBLogic.F_mu_ref.typing.html  WBLogic.F_mu_ref.unary.examples.very_awkward.html  WBLogic.F_mu_ref.unary.fundamental.html  WBLogic.F_mu_ref.unary.logrel.html  WBLogic.F_mu_ref.unary.soundness.html  WBLogic.F_mu_ref.wp_rules.html  WBLogic.heap_lang.adequacy.html  WBLogic.heap_lang.derived_laws.html  WBLogic.heap_lang.primitive_laws.html  WBLogic.heap_lang.proofmode.html  WBLogic.heap_lang_examples.awkward.html  WBLogic.heap_lang_examples.sts.very_awkward.html  WBLogic.heap_lang_examples.very_awkward.html  WBLogic.heap_lang_trace.adequacy.html  WBLogic.heap_lang_trace.class_instances.html  WBLogic.heap_lang_trace.derived_laws.html  WBLogic.heap_lang_trace.lang.html  WBLogic.heap_lang_trace.notation.html  WBLogic.heap_lang_trace.primitive_laws.html  WBLogic.heap_lang_trace.proofmode.html  WBLogic.heap_lang_trace.tactics.html  WBLogic.heap_lang_trace.trace_resources.html  WBLogic.heap_lang_trace_examples.sequential_trace_alt.html  WBLogic.oneshot.html  (+10 more)
(+62 files in other folders)
