opam-version: "2.0"
name: "coq-well-bracketed"
synopsis: "Well-bracketed control flow"
version: "dev"
maintainer: "Amin Timany"
authors: "Amin Timany, Armaël Guéneau, Lars Birkedal"
license: "BSD-2-Clause"
homepage: "https://github.com/logsem/well-bracketed-logic/tree/master"
bug-reports: "https://github.com/logsem/well-bracketed-logic/tree/master"
build: [make "-j%{jobs}%"]
install: [make "install"]
remove: ["rm" "-rf" "%{lib}%/coq/user-contrib/wellbracketed"]
depends: [
  "coq-iris" { (= "dev.2023-10-03.0.70b30af7") }
  "coq-autosubst" { (= "dev") }
  "coq-iris-heap-lang" { (= "dev.2023-10-03.0.70b30af7") }
  "coq-stdpp" { (= "dev.2023-10-03.0.83c8fcbf") }
  "coq" { (>= "8.18") | (= "dev") }
]
